# skitur

./: .dockerignore  .gitignore  Badger_Pass_to_Ostrander_Hut.gpx  Brainard_Lake.gpx  Crater_Lake_Day_3.gpx  Crater_Lake_Day_4.gpx  Dockerfile  LICENSE  Okuteine_Hut_Loop_Tour_Mt._Okuteine_and_Mt._Tsuge.gpx  Okuteine_Hut_Okuteine_River_Valley_Route.gpx  Ostrander_Hut_to_Badger_Pass.gpx  Polallie_Ridge-Tilly_Jane_ski_tour.gpx  README.md  _preseed_trail_counts.json  alaska_cabins.gpx  docker-entrypoint.sh  fly.toml  long_ski_at_tahoe_donner.gpx  pyproject.toml  regen_debug.sh
.do/: app.yaml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile  docker-entrypoint.sh  fly.toml  preseed_dem_cache.py
deploy/config/: production.py
scripts/: build_nordic_way_tile_manifest.py  estimate_overpass_nordic_world.py  generate_rating_curves_svg.py  prefetch_dem_for_osm_ski_trails.py  preseed_dem_cache.py  profile_report_generation.py  regen_debug.sh  update_docs.py  update_readme_screenshots.py  visualize_nordic_way_coverage.py  watch_readme_preview.py
skitur/: __main__.py  analyze.py  app.py  cli.py  config.py  geo.py  gpx.py  mapdata.py  optimize.py  plot.py  report.py  score.py  stats.py  terrain.py  web.py
skitur/templates/: index.html
tests/: conftest.py  test_cli.py  test_deptry.py  test_geo.py  test_gpx.py  test_gpx_parser_acceptance.py  test_main.py  test_plot.py  test_readme.py  test_report.py  test_score.py  test_score_curves.py  test_stats.py  test_terrain.py  test_visual.py  test_web.py
tests/data/: Twin_Lakes.gpx  hood_descent.gpx
tickets/: 003-ground-colormap-not-sharp.md  010-map-fill-max-zoom.md  016-brainstorm-plots.md  020-chart-horizontal-space.md  021-colormap-tick-alignment.md  022-ground-legend-title.md  024-map-view-toggle.md  025-fine-print-credits.md  027-mit-license.md  028-security-audit.md  029-launchability-audit.md  030-launch-plan.md  032-minimize-non-ascii.md  033-track-segment-coloring.md  034-named-features.md  037-topo-line-labeling.md  039-avy-time-stats.md  043-tufte-audit.md  048-rate-limiting.md  050-unit-toggle.md  051-topo-line-density.md  052-dem-data-sources.md  053-concurrent-analysis.md  054-default-dem-cache-seed-plan.md  056-track-stats-gap-and-score-card-width.md  057-mobile-legend-bars-disappear.md  058-path-optimization-skiable-safe-routing.md  059-ground-legend-hard-breakpoints.md  060-static-report-no-upload-ui.md  061-unify-slope-sampling-accuracy.md  INDEX.md
tickets/FIXED/: 001-elevation-profile-broken.md  002-heatmap-disconnects-on-zoom.md  003-ground-colormap-not-sharp.md  010-map-fill-max-zoom.md  011-violin-plots-redesign.md  013-ground-colormap-orange-zone.md  014-track-cmap-to-20-degrees.md  023-points-label.md  025-fine-print-credits.md  026-distance-sigfigs.md  027-mit-license.md  031-static-page-cli.md  035-score-bar-overflow.md  036-regen-debug-script.md  038-visual-testing.md  039-avy-time-stats.md  040-skinnier-layout.md  041-remove-distribution-legend.md  042-delete-avy-lines-ground-dist.md  044-track-dist-hover-percent.md  045-ground-dist-degree-ticks.md  046-remove-plotly-watermark.md  047-elevation-profile-thinner.md  049-aspect-rose.md  055-contour-line-spacing-standard.md
tickets/WONTFIX/: 012-more-scoring-categories.md  015-code-duplication-refactor.md  048-rate-limiting.md
