[project]
name = "skitur"
version = "0.1.0"
description = "Analyze cross-country ski touring routes"
requires-python = ">=3.10"
dependencies = [
    "contourpy",
    "dem-stitcher",
    "flask",
    "lxml",
    "numpy",
    "orjson",
    "rasterio",
    "scipy",
]

[project.optional-dependencies]
dev = [
    # Keep for parser parity tests only; runtime uses faster lxml-based parsing.
    "gpxpy",
    "pytest",
    "pytest-cov",
    "pytest-ruff",
    "pytest-randomly",
    "pytest-mypy",
    "pytest-socket",
    "ruff",
    "mypy",
    "matplotlib",
    "deptry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests", "skitur"]
required_plugins = [
    "pytest-cov",
    "pytest-ruff",
    "pytest-randomly",
    "pytest-mypy",
    "pytest-socket",
]
addopts = [
    "-v",
    "--tb=short",
    "--ruff",
    "--mypy",
    "--disable-socket",
    "--cov=skitur",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["skitur"]
branch = true
omit = ["skitur/optimize.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
