[project]
name = "skitur"
version = "0.1.0"
description = "Analyze cross-country ski touring routes"
requires-python = ">=3.10"
dependencies = [
    "cachetools",
    "contourpy",
    "dem-stitcher @ git+https://github.com/mikegraham/dem-stitcher.git@all-optimizations",
    "flask",
    "lxml",
    "numpy",
    "opencv-python-headless",
    "orjson",
    "rasterio",
    "scipy",
    "shapely",
]

[project.optional-dependencies]
dev = [
    # Keep for parser parity tests only; runtime uses faster lxml-based parsing.
    "gpxpy",
    "hypothesis",
    "playwright",
    "pytest",
    "pytest-cov",
    "pytest-ruff",
    "pytest-randomly",
    "pytest-mypy",
    "pytest-socket",
    "ruff",
    "mypy",
    "matplotlib",
    "deptry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests", "skitur"]
required_plugins = [
    "pytest-cov",
    "pytest-ruff",
    "pytest-randomly",
    "pytest-mypy",
    "pytest-socket",
]
addopts = [
    "-v",
    "--tb=short",
    "--ruff",
    "--mypy",
    "--disable-socket",
    "--cov=skitur",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["skitur"]
branch = true
omit = ["skitur/optimize.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.deptry]
exclude = ["scripts", "verify_refactor\\.py", "time_refactor\\.py", "profile_old\\.py", "upstream", "\\.venv", "_refactor_baseline"]

[tool.deptry.per_rule_ignores]
DEP002 = ["gpxpy", "pytest", "pytest-cov", "pytest-ruff", "pytest-randomly", "pytest-mypy", "pytest-socket", "ruff", "mypy", "matplotlib", "deptry"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]
